fixing one redundant check and optimizing (no functional change)